# patina

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  run-doctests
.github/workflows/: python-package.yml
docs/: conf.py  hashmap.rst  index.rst  option.rst  result.rst
patina/: __init__.py  _utils.py  hashmap.py  option.py  ref.py  result.py
result/: _utils.py  option.py  ref.py  result.py
