[tool.poetry]
name = "result"
version = "0.1.0"
description = "Result and Option types for Python"
authors = ["Patrick Gingras <775.pg.12@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "20.8b1"
mypy = "0.790"
sphinx = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
