[tool.poetry]
name = "patina"
version = "0.4.0"
description = "Rusty types for Python"
authors = ["Patrick Gingras <775.pg.12@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/p7g/patina"
documentation = "https://patina.rtfd.io"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "20.8b1"
mypy = "0.790"
sphinx = "^3.2.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
